--- a/ui/electron/index.html
+++ b/ui/electron/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <footer>
-        <div class="footer-copyright">Made by glower</div>
+        <div id="backup-status"></div>
     </footer>
 
     <!--JavaScript at end of body for optimized loading-->
